<resources>
    <string name="app_name">AOV App</string>
    <string name="is_hebrew">false</string>
    <string name="tickets">Tickets</string>
    <string name="count">Count:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="price">Price:</string>
    <string name="click_here">Click here</string>
    <string name="order_now">Order Now</string>
    <string name="purchases_history">Purchases History</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="plot_text">Act of Valor takes audiences deep into the secretive world of the most elite, highly trained group of warriors in the modern world. When the rescue of a kidnapped CIA operative leads to the discovery of a deadly terrorist plotagainst the U.S., a team of SEALs is dispatched on a worldwide manhunt. As the valiant men of Bandito Platoon race to stop a coordinated attack that couldkill and wound thousands of American civilians, they must balance their commitment to country, team and their families back home. \n\n Each time they accomplish their mission, a new piece of intelligence reveals another shocking twist to the deadly terror plot, which stretches from Chechnya to the Philippines and from Ukraine to Somalia. The widening operation sends the SEALs across the globe as they track the terrorist ring to the U.S.-Mexico border, where they engage in an epic firefight with an outcome that has potentially unimaginable consequences for the future of America.\n</string>
    <string name="plot">Plot</string>
</resources>