<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical"
    android:background="@drawable/background1">

    <TextView
        android:id="@+id/historyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:text="@string/purchases_history"
        android:textColor="#c2fffb"
        android:textSize="35dp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_marginLeft="0dp" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/historyCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="left"
            android:gravity="center"
            android:text="@string/count"
            android:textColor="#ffd8c2"
            android:textSize="33dp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"/>

        <TextView
            android:id="@+id/historyCountNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:hint="-"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:textColor="#ffffff"
            android:textSize="30dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/historyDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="#ffd8c2"
            android:textSize="33dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"/>

        <TextView
            android:id="@+id/historyDateNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:hint="-"
            android:layout_marginLeft="50dp"
            android:textColor="#ffffff"
            android:textSize="30dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/historyTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="#ffd8c2"
            android:textSize="33dp"
            android:layout_marginTop="30dp"

            android:textStyle="bold"
            android:layout_marginLeft="40dp"/>

        <TextView
            android:id="@+id/historyTimeNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:hint="-"
            android:layout_marginLeft="50dp"
            android:textColor="#ffffff"
            android:textSize="30dp" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/historyPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="#ffd8c2"
            android:textSize="33dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"/>

        <TextView
            android:id="@+id/historyPriceNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:hint="-"
            android:layout_marginLeft="50dp"
            android:textColor="#ffffff"
            android:textSize="30dp"/>

    </GridLayout>

</LinearLayout>